# cppcourse-brunel

./: .gitignore  CMakeLists.txt  Doxyfile.in  Doxyfile~  README.md  spikes_2_5.gdf
doc/html/: Constants_8hpp.html  Constants_8hpp_source.html  Current_8hpp_source.html  Network_8hpp_source.html  Neuron_8hpp_source.html  annotated.html  classCurrent-members.html  classCurrent.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  index.html
doc/html/search/: all_0.js  all_1.js  all_5.js  all_7.js  all_8.js  functions_9.js  search.js
doc/latex/: Constants_8hpp.tex  annotated.tex  classCurrent.tex  classNetwork.tex  classNeuron.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex
docs/html/: Constants_8hpp_source.html  Current_8hpp_source.html  Network_8hpp_source.html  Neuron_8hpp_source.html  annotated.html  classCurrent-members.html  classCurrent.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  classes.html  files.html  functions.html  functions_func.html  index.html
docs/html/search/: all_1.js  all_2.js  all_6.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  search.js
docs/latex/: classCurrent.tex  classNetwork.tex  classNeuron.tex  refman.tex
results/: spikes_1_5.gdf  spikes_eta0.9_g4.5.gdf  spikes_eta1_g4.5.gdf  spikes_eta2_g5.gdf
src/: Constants.hpp  Current.cpp  Current.hpp  Doxyfile  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  graph.py  main.cpp  main_unittest.cpp  spikes.gdf
src/docs/html/: Constants_8hpp_source.html  Current_8hpp_source.html  Network_8hpp_source.html  Neuron_8hpp_source.html  annotated.html  classCurrent-members.html  classCurrent.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  classes.html  files.html  functions.html  functions_func.html  index.html
src/docs/html/search/: all_1.js  all_2.js  all_4.js  classes_0.js  functions_1.js  functions_4.js  functions_6.js  search.js
src/docs/latex/: annotated.tex  classCurrent.tex  classNetwork.tex  classNeuron.tex  refman.tex
test/: main_unittest.cpp
